Admin Panel. Habits Management Page. Adding sort feature (#7712)
* init commit

* improved sort logic for habits

* fixed tests

* improved code coverage